flow bit should fix

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dexie": "^3.2.3",
     "easystarjs": "^0.4.4",
     "file-saver": "^2.0.5",
-    "flowbite-react": "^0.3.8",
+    "flowbite": "^1.6.3",
+    "flowbite-react": "^0.1.12",
     "generate-maze": "^1.1.0",
     "html-to-image": "^1.11.11",
     "jspdf": "^2.5.1",
