--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "18.2.0",
     "react-resize-detector": "^8.0.3",
     "react-to-print": "^2.14.11",
+    "sass": "^1.63.6",
     "sudokutoolcollection": "^1.1.3",
     "ts-loader": "^9.4.1",
     "uuid": "^9.0.0",
